# ai-settings

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
agents/code-reviewer/: AGENT.md
agents/debugger/: AGENT.md
agents/fastapi-backend/: AGENT.md
agents/ml-helper/: AGENT.md
agents/next-frontend/: AGENT.md
agents/pr-writer/: AGENT.md
docs/ai/: coding-standards.md  commands.md  git-workflow.md  hard-gates.md  ml.md  persona.md  personality.md  python.md  red-flags.md  rtk-awareness.md  style.md  three-tiers.md  typescript.md  writing-voice.md
docs/setup/: claude-code.md  codex.md  cursor.md  customization.md  gemini.md  new-project.md
docs/superpowers/plans/: 2026-04-18-ai-settings-implementation.md  2026-04-18-tg-post-cover.md  2026-04-19-popovs-boilerplate.md  2026-04-19-token-savings.md
docs/superpowers/specs/: 2026-04-18-ai-settings-design.md  2026-04-18-tg-post-cover-design.md  2026-04-19-token-savings-design.md
examples/: links.md
examples/prompts/: README.md
scripts/: bump-skill-version.sh  deploy-skills.sh  init-project.sh  install.sh  sync-cursor.sh
scripts/lib/: common.sh
settings/: claude-settings.json  codex-config.toml
settings/hooks/: session-start-reminder.sh
skills/: README.md
skills/code/changelog-entry/: CHANGELOG.md  README.md
skills/code/ru-commit-message/: README.md  SKILL.md
skills/popovs/: write-meridian-article
skills/popovs/boilerplate/: CHANGELOG.md  (+2 more)
tests/skill_lint/: README.md  conftest.py  test_negative.py  test_skills.py
(+21 files in other folders)
